TestSuite/errors/err0133.pas

const s = 'sss';
const i : integer = s;
    
begin
end.